(REF) fixed error when footer dissapears or jumps up in the how to use page

--- a/css/style-how-to-use.css
+++ b/css/style-how-to-use.css
@@ -79,11 +79,12 @@ footer{
     display: flex;
     flex-flow: row nowrap;
     background-color: var(--FOOTER-BGCOLOR);
-    position: sticky;
+    position: fixed;
+    z-index: 1;
     justify-content: space-evenly;
     bottom: 0;
     width: 100%;
-    height: 30px;
+    height: 35px;
     font-size: var(--FOOTER-FONT-SIZE);
 }
 
